# shanxi_resilience_enhancement

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.org  README_USE_GUIDE.md  analyze_data.py  analyze_section_path_data.py  analyze_simple.py  pyproject.toml  项目框架配置说明.org
.claude/: settings.local.json
.claude/agents/: shanxi-resilience-data-engineer.md  shanxi-resilience-dim-manager.md  shanxi-resilience-path-analyzer.md
.claude/memory/: MEMORY.md
.claude/rules/: agents.md  coding-style.md  git-workflow.md  parallel-patterns.md  patterns.md  security.md  testing.md
.claude/skills/: SKILLS_INDEX.md
configs/: base.yaml  construction_anchor_aggregation.yaml  db.yaml  dev.yaml  logging.yaml  path_repair.yaml  prod.yaml  task.yaml
docs/: Jobs使用说明.md  M2_收费单元_OD_path_小时流量统计运行说明.md  M6_批量运行方案.md  M6_批量运行说明.md  PostgreSQL快速安装指南_Ubuntu20.04.md  PostgreSQL搭建指南.md  od_path_aggregation_development_plan.md  业务逻辑记录.md  会话记录与搭建过程.md  动态测算流程1_2_3说明.txt  收费单元唯一路径数据分析结果.md  收费单元路径数据建表与导入指南.md  数据表说明.md  路径修正与折返识别算法开发计划.md  项目使用指南.md  高速路网拓扑结构表使用指南.md
docs/00_项目总览/: 项目总体说明.org
docs/01_开发规范/: Git协作规范.org  Python编码规范.org  SQL编写规范.org  日志与错误处理规范.org
docs/02_数据设计/: 主键与编码规范.org  命名规范.org  字段字典.org  数据分层规范.org  表口径总表.org
docs/03_接口文档/: 接口总览.org
docs/04_模块设计/: M0_数据工程.org  M1_通行能力评估.org  M2_流量与OD迁移统计补全.org  M3_交通影响分析.org  (+6 more)
scripts/: TOOLS_GUIDE.md  analyze_toll_road.py  analyze_toll_station.py  build_tom_network_pgr.py  check_field_lengths.py  check_toll_station_fields.py  complete_pgrouting_setup.py  create_all_path_functions.py  demo_max_depth.py  explore_tom_noderelation.py  export_gstx_exit.py  final_test_pgrouting.py  import_202603_version.py  import_construction_segment.py  import_detour_ratio_rule.py  import_lane_capacity_rule.py  import_section_path.py  import_toll_road.py  import_toll_station.py  import_toll_station_strict.py  import_tom_noderelation.py  init_db.sh  install_pgrouting.py  optimize_tom_network.py  read_csv_only.py  read_dict_simple.py  read_toll_station_dict.py  run_dev.sh  simple_import.py  test_db_connection.py  test_exclude_paths.py  test_final.py  test_fix_dedup.py  test_hive_connection.py  test_path_schemes.py  test_path_schemes_v2.py  test_pgrouting.py  test_single_insert.py  test_top_n_paths.py  test_top_n_pgr.py  (+4 more)
sql/: init_database.sql
tools/: README.md  check_and_fix_od_data.py  extract_gaosu_data.py  filter_od_detail.py  hive_export.py  query_od_vehicles.py  query_path_fee.py  repair_path_info.py  split_by_month.py  vehicle_treat_analyse.py
(+319 files in other folders)
